--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "uuid": "^8.3.2",
     "vue": "^3.2.37"
   },
   "devDependencies": {
